<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragments.home.HomeFragment"
    android:background="@color/white"
    android:paddingTop="20dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:scrollbars="none"
        tools:layout_editor_absoluteY="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/diseniorectangle"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:paddingLeft="10dp"
                        android:text="@string/txt_creaciones"
                        android:textColor="@color/text_primary"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_ver_todas"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:text="@string/txt_link_ver_creaciones"
                        android:textAlignment="center"
                        android:textColor="@color/text_primary"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_texto_sin_eventos_creador"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:text="Aún no has creado eventos. Vamos allá!!"
                    android:textSize="14dp"
                    android:textColor="@color/text_primary"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:visibility="gone"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_eventos_propios"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="20dp"
                    android:orientation="horizontal"
                    android:scrollbars="none"
                    android:visibility="visible"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/txt_destacados"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="290dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/diseniorectangle"
                android:backgroundTint="@color/red_light"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.35"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/iv_evento_destacado"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.35"
                            android:text="@string/txt_nombre_evento"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/text_primary"/>

                        <TextView
                            android:id="@+id/tv_nombre_evento_destacado"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.65"
                            android:textSize="15sp"
                            android:textColor="@color/text_primary"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.35"
                            android:text="@string/txt_fecha_inicio"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/text_primary"/>

                        <TextView
                            android:id="@+id/tv_fecha_inicio_evento_destacado"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.65"
                            android:textSize="15sp"
                            android:textColor="@color/text_primary"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.35"
                            android:text="Cant Part: "
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/text_primary"/>

                        <TextView
                            android:id="@+id/tv_fecha_fin_evento_destacado"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.65"
                            android:textSize="15sp"
                            android:textColor="@color/text_primary"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/txt_participaciones"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_sin_eventos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sin_eventos"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_eventos_participados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:scrollbars="none"
                android:visibility="gone"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>