<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainTabs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:background="@drawable/diseniocuadrado3">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.17"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:background="@drawable/diseniocirculogris"
            >

            <ImageButton
                android:id="@+id/btn_alertas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="#00000000"
                android:src="@drawable/ic_warning"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:text="@string/txt_alertas"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/text_primary"
                android:textAlignment="center">
            </TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.17"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:background="@drawable/diseniocirculogris"
            >

            <ImageButton
                android:id="@+id/btn_rutas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="#00000000"
                android:src="@drawable/ic_rutas"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:text="@string/txt_rutas"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/text_primary"
                android:textAlignment="center">
            </TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.17"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="11dp"
            android:background="@drawable/diseniocirculo"
            >

            <ImageButton
                android:id="@+id/btn_inicio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="#00000000"
                android:src="@drawable/ic_home2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:text="@string/txt_inicio"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center">
            </TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.17"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:background="@drawable/diseniocirculogris"
            >

            <ImageButton
                android:id="@+id/btn_eventos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="#00000000"
                android:src="@drawable/ic_road"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:text="@string/txt_eventos"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/text_primary"
                android:textAlignment="center">
            </TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.17"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:background="@drawable/diseniocirculogris"
            >

            <ImageButton
                android:id="@+id/btn_info"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="#00000000"
                android:src="@drawable/ic_info"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:text="@string/txt_info"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/text_primary"
                android:textAlignment="center">
            </TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"/>

    </LinearLayout>


</FrameLayout>